Прикрепил шрифты от осом, сверстал шапку, приступаю к верхнему меню

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,8 +20,42 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <div class="container-fuid top-up">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3">
+					<a href="#"><img src="img/logo.png" alt=""></a>
+				</div>
+				<div class="col-lg-3">
+					<p class="top-address">197046, г. Санкт-Петербург,<br />
+						ул. Чапаева, д.5, оф. 612</p>
+				</div>
+				<div class="col-lg-3">
+					<p class="top-email">
+						mail@tphmspb.ru
+					</p>
+				</div>
+				<div class="col-lg-3 top-search">
+					<form>
+						<input type="text" placeholder="Поиск по сайту">
+						<i class="fa fa-search" aria-hidden="true"></i>
+						<input type="submit" style="background-image: url(img/submit-top.png);">
+					</form>
+					<p class="top-phone-up">Заказать звонок</p>
+					<p class="top-phone"><span class="tp-1">+7 (812) </span><span class="tp-2">332-10-53</span></p>
+				</div>
+			</div>
+		</div>		
+	</div>
+	<nav role="navigation" class="navbar top-navbar">
+		<div class="container-fuid top-menu">
+			<div class="container">
+				<div class="row">
+				
+				</div>
+			</div>
+		</div>
+	</nav>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
