--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
 	</div>
 	<nav role="navigation" class="navbar top-navbar">
 		<div class="container-fuid top-menu">
-			<!--div class="container">
-				<div class="row"-->
 					<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip container">					
 						<ul class="jq-dropdown-menu" id="ddmenu">							
 							<li class=""><a href="#"  class="left-top-menu" data-toggle="dropdown">Услуги компании <span class="caret"></span></a>
@@ -70,16 +68,18 @@
 									<li class="separ"></li>
 									<button class="but-close"></button>
 								  </div>
-								</ul>
-								
+								</ul>								
 							</li>							
-						</ul> 						
+						</ul> 	
+						<ul class="right-top-menu">
+							<li><a href="#">О компании</a></li>
+							<li><a href="#">Техническая база</a></li>
+							<li><a href="#">Наши партнеры</a></li>
+							<li><a href="#">Выполненные объекты</a></li>
+							<li><a href="#">Лицензии</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
 					</div>
-					<!--div class="col-lg-8">
-					
-					</div-->
-				<!--/div>
-			</div-->
 		</div>
 	</nav>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
