Установил адаптивную универсальную карусель, предыдущу удалил нахрен!!!

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 	<link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/full-slider.css" rel="stylesheet">
-    <link href="css/style-demo.css" rel="stylesheet">
 	
-
+    <!-- Owl Stylesheets -->
+    <link rel="stylesheet" href="owl/owl.carousel.css">
+    <!-- Owl Stylesheets -->
+	
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -117,14 +119,14 @@
 				<div class="col-lg-1 col-md-1">
 				
 				</div>
-				<div class="col-lg-2 col-md-2 obr-main-left">
+				<div class="col-lg-2 col-md-2 col-sm-2 col-x obr-main-left">
 					<p class="obr1">Обращение <br />ведущего менеджера</p>
 					<p class="obr2">Иванов Иван</p>
 				</div>
-				<div class="col-lg-7 col-md-7 obr-main-center">
+				<div class="col-lg-7 col-md-7 col-sm-7 obr-main-center">
 					<p>Представляем Вашему вниманию компанию ООО “ТехноПромХим Монтаж” ("ТПХМ"), осуществляющую полный комплекс проектных, строительно- монтажных, специализированных работ и реконструкцию на объектах гражданского назначения, нефтехимической отрасли, транспортного и промышленного строительства. </p>
 				</div>
-				<div class="col-lg-2 col-md-2 obr-main-right">
+				<div class="col-lg-2 col-md-2 col-sm-2 obr-main-right">
 					<img src="img/obraschenie.png" alt="">
 				</div>
 			</div>
@@ -133,58 +135,91 @@
 	<div class="container main-maid">
 		<div class="row">
 			<h3>НАШИ ОБЪЕКТЫ</h3>
-			<div class="col-lg-6 col-md-6 objects-one">
-				<div>
-					<div class="car-image1">
-						<span></span>
-						<img src="http://lorempixel.com/246/128/technics" alt="">
-					</div>
-					<div class="car-description">
-						<p>Проектирование слаботочных систем</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-6 col-md-6 objects-one">
-				<div>
-					<div class="car-image1">
-						<span></span>
-						<img src="http://lorempixel.com/246/128/technics" alt="">
-					</div>
-					<div class="car-description">
-						<p>Проектирование слаботочных систем</p>
-					</div>
-				</div>
-			</div>
 			
+				<div class="owl-carousel-zero">
+					<div class="item objects-one">
+					  <div class="car-image1">
+						<span></span>
+						<img src="http://lorempixel.com/246/128/technics/1" alt="">
+					</div>
+					<div class="car-description">
+						<p>Проектирование слаботочных систем</p>
+					</div>
+					</div>
+					<div class="item objects-one">
+					  <div class="car-image1">
+						<span></span>
+						<img src="http://lorempixel.com/246/128/technics/2" alt="">
+					</div>
+					<div class="car-description">
+						<p>Проектирование слаботочных систем</p>
+					</div>
+					</div>
+					<div class="item objects-one">
+					  <div class="car-image1">
+						<span></span>
+						<img src="http://lorempixel.com/246/128/technics/3" alt="">
+					</div>
+					<div class="car-description">
+						<p>Проектирование слаботочных систем</p>
+					</div>
+					</div>
+					<div class="item objects-one">
+					  <div class="car-image1">
+						<span></span>
+						<img src="http://lorempixel.com/246/128/technics/4" alt="">
+					</div>
+					<div class="car-description">
+						<p>Проектирование слаботочных систем</p>
+					</div>
+					</div>
+				</div>
+	
 		</div>
 		<div class="row">
 			<h3>ЛИЦЕНЗИИ</h3>
 			<div id="jcl-demo" class="container">
-				<div class="custom-container nonCircular">
-					<a href="#" class="prev">&lsaquo;</a>
-					<div class="carousel">
-						<ul>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-							<li><a href="#"><img src="http://lorempixel.com/250/180/technics"></a></li>
-						</ul>
+				<div class="owl-carousel">
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
 					</div>
-					<a href="#" class="next">&rsaquo;</a>
-					<div class="clear"></div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
+					<div class="item">
+					  <img src="http://lorempixel.com/246/128/technics" alt="">
+					</div>
 				</div>
-				
-			</div>
-			
-			<p class="carousel-description">Компания ООО “ТПХМ” более 6 лет существует на рынке и оказывает следующие услуги:</p>
-			
+			</div>				
+		</div>	
+			<p class="carousel-description">Компания ООО “ТПХМ” более 6 лет существует на рынке и оказывает следующие услуги:</p>			
 		</div>
 	</div>
 	
@@ -198,17 +233,60 @@
 		})
     </script>	
     <script src="js/top-menu.js"></script>
-    <script src="js/jCarouselLite.js"></script>
-	<script>
-	$(".nonCircular .carousel").jCarouselLite({
-    btnNext: ".nonCircular .next",
-    btnPrev: ".nonCircular .prev",
-	auto: 5000,
-    speed: 800,
-	visible: 4
-    //circular: false,
-	
-    });
-	</script>
+	<!-- Owl js -->
+	<script src="owl/owl.carousel.js"></script>
+		  <script>
+            $(document).ready(function() {
+              $('.owl-carousel').owlCarousel({
+                loop: true,
+				autoplay:true,
+                margin: 10,
+                responsiveClass: true,
+                responsive: {
+                  0: {
+                    items: 1,
+                    nav: true
+                  },
+                  600: {
+                    items: 3,
+                    nav: false
+                  },
+                  1000: {
+                    items: 4,
+                    nav: true,
+                    loop: false,
+                    margin: 20
+                  }
+                }
+              })
+            })
+          </script>
+		  <script>
+            $(document).ready(function() {
+              $('.owl-carousel-zero').owlCarousel({
+                loop: true,
+				autoplay:true,
+                margin: 10,
+                responsiveClass: true,
+                responsive: {
+                  0: {
+                    items: 2,
+                    nav: true
+                  },
+                  600: {
+                    items: 2,
+                    nav: true
+                  },
+                  1000: {
+                    items: 2,
+                    nav: true,
+                    loop: true,
+                    margin: 20
+                  }
+                }
+              })
+            })
+          </script>
+	<!-- Owl js -->
   </body>
 </html>
