Чуть подправил индексный файл

--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
                 loop: true,
 				autoplay:true,
                 margin: 10,
+				dots: false,
+				smartSpeed: 800,
                 responsiveClass: true,
                 responsive: {
                   0: {
@@ -249,7 +251,7 @@
                   },
                   600: {
                     items: 3,
-                    nav: false
+                    nav: true
                   },
                   1000: {
                     items: 4,
@@ -267,10 +269,12 @@
                 loop: true,
 				autoplay:true,
                 margin: 10,
+				dots: false,
+				smartSpeed: 1000,
                 responsiveClass: true,
                 responsive: {
                   0: {
-                    items: 2,
+                    items: 1,
                     nav: true
                   },
                   600: {
