--- a/index.html
+++ b/index.html
@@ -456,14 +456,14 @@
 		<div class="footer container-fluid">
 				<div class="row">
 					<div class="footer-row">
-						<div class="col-lg-3 col-md-3">
+						<div class="col-lg-3 col-md-3 col-sm-5 col-xs-5">
 						Свидетельство СРО -П-170-
 						16032012 – Допуск к
 						определенному виду или
 						</div>
-						<div class="col-lg-7 col-md-7">
+						<div class="col-lg-7 col-md-7 col-sm-5 col-xs-2">
 						</div>
-						<div class="col-lg-2 col-md-2">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-5">
 						2015 - 2016
 						</div>
 					</div>
@@ -498,7 +498,7 @@
                     nav: true
                   },
                   600: {
-                    items: 3,
+                    items: 2,
                     nav: true
                   },
                   1000: {
@@ -554,7 +554,7 @@
                     nav: true
                   },
                   600: {
-                    items: 3,
+                    items: 2,
                     nav: true
                   },
                   1000: {
