--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <div class="container-fuid top-up">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-3">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 					<a href="#"><img src="img/logo.png" alt=""></a>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 					<p class="top-address">197046, г. Санкт-Петербург,<br />
 						ул. Чапаева, д.5, оф. 612</p>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-2">
 					<p class="top-email">
 						mail@tphmspb.ru
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 top-search">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 top-search">
 					<form action="">
 						<input type="text" placeholder="Поиск по сайту">
 						<i class="fa fa-search" aria-hidden="true"></i>
@@ -120,14 +120,14 @@
 				<div class="col-lg-1 col-md-1 col-sm-1">
 				
 				</div>
-				<div class="col-lg-2 col-md-3 col-sm-4 col-x obr-main-left">
+				<div class="col-lg-2 col-md-3 col-sm-3 col-x obr-main-left">
 					<p class="obr1">Обращение <br />ведущего менеджера</p>
 					<p class="obr2">Иванов Иван</p>
 				</div>
-				<div class="col-lg-7 col-md-6 col-sm-5 obr-main-center">
+				<div class="col-lg-7 col-md-6 col-sm-6 obr-main-center">
 					<p>Представляем Вашему вниманию компанию ООО “ТехноПромХим Монтаж” ("ТПХМ"), осуществляющую полный комплекс проектных, строительно- монтажных, специализированных работ и реконструкцию на объектах гражданского назначения, нефтехимической отрасли, транспортного и промышленного строительства. </p>
 				</div>
-				<div class="col-lg-2 col-md-2 col-sm-1 obr-main-right">
+				<div class="col-lg-2 col-md-2 col-sm-2 obr-main-right">
 					<img src="img/obraschenie.png" alt="">
 				</div>
 			</div>
@@ -457,9 +457,7 @@
 				<div class="row">
 					<div class="footer-row">
 						<div class="col-lg-3 col-md-3 col-sm-5 col-xs-5">
-						Свидетельство СРО -П-170-
-						16032012 – Допуск к
-						определенному виду или
+						mail@tphmspb.ru<br />+7 (812) 332-10-53
 						</div>
 						<div class="col-lg-7 col-md-7 col-sm-5 col-xs-2">
 						</div>
