--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						mail@tphmspb.ru
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 top-search">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 top-search">
 					<form action="">
 						<input type="text" placeholder="Поиск по сайту">
 						<i class="fa fa-search" aria-hidden="true"></i>
@@ -456,12 +456,12 @@
 		<div class="footer container-fluid">
 				<div class="row">
 					<div class="footer-row">
-						<div class="col-lg-3 col-md-3 col-sm-5 col-xs-5">
+						<div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
 						mail@tphmspb.ru<br />+7 (812) 332-10-53
 						</div>
-						<div class="col-lg-7 col-md-7 col-sm-5 col-xs-2">
+						<div class="col-lg-7 col-md-7 col-sm-5 col-xs-0">
 						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-5">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 						2015 - 2016
 						</div>
 					</div>
@@ -485,7 +485,7 @@
             $(document).ready(function() {
               $('.owl-carousel').owlCarousel({
                 loop: true,
-				autoplay:false,
+				autoplay:true,
                 margin: 10,
 				dots: false,
 				smartSpeed: 800,
@@ -502,7 +502,6 @@
                   1000: {
                     items: 4,
                     nav: true,
-                    loop: false,
                     margin: 20
                   }
                 }
@@ -530,7 +529,6 @@
                   1000: {
                     items: 2,
                     nav: true,
-                    loop: true,
                     margin: 20
                   }
                 }
@@ -541,14 +539,14 @@
             $(document).ready(function() {
               $('.owl-carousel-three').owlCarousel({
                 loop: true,
-				autoplay:false,
+				autoplay:true,
                 margin: 10,
 				dots: false,
 				smartSpeed: 800,
                 responsiveClass: true,
                 responsive: {
                   0: {
-                    items: 2,
+                    items: 1,
                     nav: true
                   },
                   600: {
@@ -558,7 +556,6 @@
                   1000: {
                     items: 3,
                     nav: true,
-                    loop: false,
                     margin: 20
                   }
                 }
