выложил на хостинг

--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">                
-				<div class="fill" style="background-image:url('http://lorempixel.com/1920/1080/technics/1');"></div>
+				<div class="fill" style="background-image:url('img/slider/img1.jpg');"></div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. --> 
-				<div class="fill" style="background-image:url('http://lorempixel.com/1920/1080/technics/2');"></div>                
+				<div class="fill" style="background-image:url('img/slider/img2.jpg');"></div>                
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->          
-				<div class="fill" style="background-image:url('http://lorempixel.com/1920/1080/technics/3');"></div>                
+				<div class="fill" style="background-image:url('img/slider/img3.jpg');"></div>                
             </div>
         </div>
     </header>
@@ -141,7 +141,7 @@
 					<div class="item objects-one">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/1" alt="">
+						<img src="img/img-slider-1.jpg" alt="">
 					</div>
 					<div class="car-description">
 						<p>Проектирование слаботочных систем</p>
@@ -150,7 +150,7 @@
 					<div class="item objects-one">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/2" alt="">
+						<img src="img/img-slider-1.jpg" alt="">
 					</div>
 					<div class="car-description">
 						<p>Проектирование слаботочных систем</p>
@@ -159,7 +159,7 @@
 					<div class="item objects-one">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/3" alt="">
+						<img src="img/img-slider-1.jpg" alt="">
 					</div>
 					<div class="car-description">
 						<p>Проектирование слаботочных систем</p>
@@ -168,7 +168,7 @@
 					<div class="item objects-one">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/4" alt="">
+						<img src="img/img-slider-1.jpg" alt="">
 					</div>
 					<div class="car-description">
 						<p>Проектирование слаботочных систем</p>
@@ -296,7 +296,7 @@
 					<div class="item">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/1" alt="">
+						<img src="img/img-slider-3.jpg" alt="">
 					</div>
 					<div class="car-description-three">
 						<p>Проектирование слаботочных систем</p>
@@ -305,7 +305,7 @@
 					<div class="item">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/2" alt="">
+						<img src="img/img-slider-3.jpg" alt="">
 					</div>
 					<div class="car-description-three">
 						<p>Выполнение проектов по
@@ -316,7 +316,7 @@
 					<div class="item">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/3" alt="">
+						<img src="img/img-slider-3.jpg" alt="">
 					</div>
 					<div class="car-description-three">
 						<p>Проектирование систем
@@ -326,7 +326,7 @@
 					<div class="item">
 					  <div class="car-image1">
 						<span></span>
-						<img src="http://lorempixel.com/246/128/technics/4" alt="">
+						<img src="img/img-slider-3.jpg" alt="">
 					</div>
 					<div class="car-description-three">
 						<p>Выполнение проектов по
