Доделка после правок

--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 	</div>
 	<nav role="navigation" class="navbar top-navbar">
 		<div class="container-fuid top-menu">
-					<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip container">					
+					<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip container">
+
+						<div class="square-dropdown navbar-header">
+							<img src="img/square-dropdown.png" alt="">
+						</div>
+					
 						<ul class="jq-dropdown-menu" id="ddmenu">							
 							<li class=""><a href="#"  class="left-top-menu" data-toggle="dropdown">Услуги компании <span class="caret"></span></a>
 								<ul class="sub-ddd">
@@ -120,14 +125,14 @@
 				<div class="col-lg-1 col-md-1 col-sm-1">
 				
 				</div>
-				<div class="col-lg-2 col-md-3 col-sm-3 col-x obr-main-left">
+				<div class="col-lg-2 col-md-3 col-sm-12 col-xs-12 obr-main-left">
 					<p class="obr1">Обращение <br />ведущего менеджера</p>
 					<p class="obr2">Иванов Иван</p>
 				</div>
-				<div class="col-lg-7 col-md-6 col-sm-6 obr-main-center">
+				<div class="col-lg-7 col-md-6 col-sm-9 col-xs-9 obr-main-center">
 					<p>Представляем Вашему вниманию компанию ООО “ТехноПромХим Монтаж” ("ТПХМ"), осуществляющую полный комплекс проектных, строительно- монтажных, специализированных работ и реконструкцию на объектах гражданского назначения, нефтехимической отрасли, транспортного и промышленного строительства. </p>
 				</div>
-				<div class="col-lg-2 col-md-2 col-sm-2 obr-main-right">
+				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 obr-main-right">
 					<img src="img/obraschenie.png" alt="">
 				</div>
 			</div>
@@ -454,6 +459,9 @@
 		  </div>
 		</div>
 		<div class="footer container-fluid">
+				<div class="footer-img">
+					<img src="img/footer-img.png" alt="">
+				</div>
 				<div class="row">
 					<div class="footer-row">
 						<div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
