После третьих правок

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip container">
 
 						<div class="square-dropdown navbar-header">
-							<img src="img/square-dropdown.png" alt="">
+							<img src="img/square-dropdown1.png" alt="">
 						</div>
 					
 						<ul class="jq-dropdown-menu" id="ddmenu">							
