--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-					<a href="#"><img src="img/logo.png" alt=""></a>
+					<a href="index.html"><img src="img/logo.png" alt=""></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 					<p class="top-address">197046, г. Санкт-Петербург,<br />
@@ -66,16 +66,16 @@
 								<ul class="sub-ddd">
 								  <div class="container">
 								    <li class="separ"></li>
-									<li><a href="#">Огнезащитная обработка
+									<li><a href="usluga.html">Огнезащитная обработка
 											металлоконструкций</a></li>
 									<li class="separ"></li>
-									<li><a href="#">Огнезащитная обработка
+									<li><a href="usluga.html">Огнезащитная обработка
                                             деревянных конструкций</a></li>
 									<li class="separ"></li>
-									<li><a href="#">Огнезащита железобетонных
+									<li><a href="usluga.html">Огнезащита железобетонных
 											конструкций</a></li>
 									<li class="separ"></li>
-									<li><a href="#">Огнезащита воздуховодов</a></li>
+									<li><a href="usluga.html">Огнезащита воздуховодов</a></li>
 									<li class="separ"></li>
 									<button class="but-close"></button>
 								  </div>
@@ -83,12 +83,12 @@
 							</li>							
 						</ul> 	
 						<ul class="right-top-menu">
-							<li><a href="#">О компании</a></li>
-							<li><a href="#">Техническая база</a></li>
-							<li><a href="#">Наши партнеры</a></li>
-							<li><a href="#">Выполненные объекты</a></li>
-							<li><a href="#">Лицензии</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="about.html">О компании</a></li>
+							<li><a href="techbaza.html">Техническая база</a></li>
+							<li><a href="partners.html">Наши партнеры</a></li>
+							<li><a href="our-works.html">Выполненные объекты</a></li>
+							<li><a href="license.html">Лицензии</a></li>
+							<li><a href="contacts.html">Контакты</a></li>
 						</ul>
 					</div>
 		</div>
